fix z-index

--- a/src/frontend/projects/editor/editor.css
+++ b/src/frontend/projects/editor/editor.css
@@ -91,6 +91,7 @@ hr {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 3;
 }
 
 .popup-background.absolute {
@@ -113,7 +114,7 @@ div[style*="visibility: hidden"]>*>*>.compile-error-popup {
     height: 50%;
     inset: 0;
     margin: auto;
-    z-index: 1;
+    z-index: 2;
 
     .shortcut {
         padding-top: 16px;
@@ -209,7 +210,7 @@ div[style*="visibility: hidden"]>*>*>.compile-error-popup {
 }
 
 #compile-popup-background {
-    z-index: 1;
+    z-index: 2;
 }
 
 .pages-container {
@@ -248,6 +249,7 @@ div[style*="visibility: hidden"]>*>*>.compile-error-popup {
 }
 
 .compile-status-container {
+    z-index: 1;
     grid-area: 1/1;
     margin-bottom: auto;
     /* fix height */
